jump-block-collide iPhone issue.

--- a/css/main.css
+++ b/css/main.css
@@ -545,7 +545,7 @@ svg.control:hover {
         transform: scale(1.5);
     }
 
-    50% {
+    40% {
         filter: url(#blur0);
         transform: scale(1);
     }
